--- a/klimaland-app/src/styles/main.scss
+++ b/klimaland-app/src/styles/main.scss
@@ -22,7 +22,7 @@ html {
 }
 
 ::-webkit-scrollbar {
-  width: 8px;
+  width: 0;
 }
 
 ::-webkit-scrollbar-thumb {
@@ -75,7 +75,6 @@ button {
     }
 
     img {
-      // background-color: aquamarine;
       width: 18%;
       max-width: 50px;
       min-width: 20px;
@@ -447,6 +446,20 @@ code {
       }
     }
 
+    ::-webkit-scrollbar {
+      width: 8px;
+    }
+
+    ::-webkit-scrollbar-thumb {
+      background: #fff1db;
+      border-radius: 10px;
+    }
+
+    ::-webkit-scrollbar-track {
+      box-shadow: inset 0 0 5px #faebd6;
+      border-radius: 10px;
+    }
+
     // sources box with info about data
     .sources-container {
       width: 100%;
@@ -469,8 +482,6 @@ code {
         width: 100%;
         height: 1.4rem;
         min-height: 1rem;
-        // bottom: 8px;
-        // left: 8px;
         display: block;
         margin-top: 0.5rem;
       }
